Transaction Delete fix (#122)
* added useMutation hook to deleting transactions. Hopefully this fixes the UI issue.

* unnecessary spaces removed

* added scrollbar to the transaction items list container

* got rid of react query dev tool and fixed the padding-bottom on App

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,5 @@
 .App {
   width: 100%;
-  padding-bottom: 1em;
+  padding-bottom: 0.3em;
   overflow: hidden;
-}
-
-::-webkit-scrollbar {
-  display: none;
 }
